--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,22 +1,71 @@
-/* src/components/Navbar.css */
-nav {
-    background-color: #282c34;
-    padding: 1em;
+/* Navbar.css */
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #333;
+  padding: 10px;
+}
+
+.navbar-brand {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-brand a {
+  color: white;
+  text-decoration: none;
+  font-size: 24px;
+}
+
+.navbar-toggle {
+  display: none;
+  font-size: 24px;
+  color: white;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.navbar-menu {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-menu li {
+  margin: 0 10px;
+}
+
+.navbar-menu a {
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+}
+
+@media (max-width: 768px) {
+  .navbar-toggle {
+    display: block;
   }
-  
-  nav ul {
+
+  .navbar-menu {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    background-color: #333;
+  }
+
+  .navbar-menu.open {
     display: flex;
-    list-style: none;
-    justify-content: space-around;
   }
-  
-  nav ul li {
-    margin: 0 10px;
+
+  .navbar-menu li {
+    margin: 0;
   }
-  
-  nav ul li a {
-    color: white;
-    text-decoration: none;
-    font-size: 18px;
+
+  .navbar-menu a {
+    padding: 10px;
+    border-top: 1px solid #444;
   }
-  
+}
