--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,25 @@
   pointer-events: none;
 }
 
+h3{
+  margin-bottom: 10px;
+
+}
+
+input[type='text'],
+input[type='date'],
+textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+textarea {
+  margin-bottom: 10px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
