--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -30,6 +30,7 @@
   background: none;
   border: none;
   cursor: pointer;
+  margin-left: auto; /* Push the toggle button to the right */
 }
 
 .navbar-menu {
@@ -47,6 +48,14 @@
   color: white;
   text-decoration: none;
   padding: 10px;
+}
+
+.navbar-hi-message {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #fff;
+  font-size: 16px;
 }
 
 @media (max-width: 768px) {
